--- a/.github/workflows/share-output.yaml
+++ b/.github/workflows/share-output.yaml
@@ -1,5 +1,5 @@
 name: Share data between jobs
-on: workflow-dispatch
+on: [push]
 jobs:
   job_1:
     name: Add 3 and 7
@@ -8,11 +8,11 @@ jobs:
       - shell: bash
         run : |
           expr 3 + 7 > math-homework.txt
-        - name: Upload math result file for job 1
-          uses: actions/upload-artifact@v3
-          with:
-            name: homework
-            path: math-homework.txt
+      - name: Upload math result file for job 1
+        uses: actions/upload-artifact@v3
+        with:
+          name: homework
+          path: math-homework.txt
     job_2:
       name: Multiply by 9
       needs: job_1
